# refrain-sheet

./: .dockerignore  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CLAUDE.md  Dockerfile  LICENSE  README.md  THIRD-PARTY-NOTICES.md  compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/skills/implement-issue/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/triage-issue/: SKILL.md
.claude/skills/verify-change/: SKILL.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  close-loop.yml  dependency-review.yml  implement-issue.yml  issue-triage.yml  release.yml  review-pr.yml
bench/: perf.bench.ts
docs/: agent-operations.md  architecture.md  performance.md  rcsv-format.md  rsf-format.md  security.md
scripts/: check-dist.mjs  check-versions.mjs  embed-wasm.mjs  release.mjs
src/: main.ts  styles.css
src/app/: app-state.ts  clipboard-controller.ts  commands.ts  file-access.ts  i18n.ts  settings.ts  sheet-font.ts  shortcuts.ts  theme.ts  version.ts
src/core/: byte-csv-parser.ts  clipboard.ts  csv-engine.ts  csv-export.ts  encoding.ts  fill-series.ts  filter.ts  flash-fill.ts  formula.ts  history.ts  lossless-document.ts  range-move.ts  rcsv-codec.ts  rcsv-document.ts  row-height-index.ts  rsf-codec.ts  rsf-document.ts  scheduler.ts  search.ts  selection-label.ts  serializer.ts  stats.ts  text-wrap.ts  validation.ts  worksheet.ts
src/locales/: en.json  ja.json
src/ui/: app-icon.ts  context-menu.ts  dialogs.ts  dom.ts  find-bar.ts  formula-autocomplete.ts  formula-bar.ts  grid.ts  ime.ts  loading-overlay.ts  menu-bar.ts  popup.ts  sheet-bar.ts  status-bar.ts  tab-bar.ts  toolbar.ts  welcome-screen.ts
src/wasm-gen/: refrain_csv_core.d.ts  refrain_csv_core.js  wasm-payload.ts
tests/: absolute-refs.test.ts  alt-enter.test.ts  app-icon.test.ts  app-state.test.ts  auto-wrap.test.ts  autofit.test.ts  branding.test.ts  clipboard.test.ts  commands.test.ts  context-menu.test.ts  corner-select-all.test.ts  cross-sheet-formulas.test.ts  csv-export.test.ts  edit.test.ts  encoding.test.ts  fill-series.test.ts  filter.test.ts  flash-fill.test.ts  formula-help.test.ts  formula-index.test.ts  formula-refs.test.ts  formula-typography.test.ts  formula.test.ts  fuzz.test.ts  grid-typography.test.ts  helpers.ts  history.test.ts  i18n.test.ts  identity.test.ts  ime-composition.test.ts  ime-editing.test.ts  insert-cells.test.ts  language-menu.test.ts  loading.test.ts  node-shims.d.ts  perf.test.ts  progress.test.ts  range-move.test.ts  rcsv-codec.test.ts  rcsv.test.ts  (+29 more)
wasm/: Cargo.toml
wasm/src/: compress.rs  csv.rs  lib.rs  ops.rs
