[package]
name = "refrain-csv-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Byte-level CSV core (parsing, validation, sniffing, indexing, serialization planning) for Refrain Sheet, compiled to WebAssembly."
repository = "https://github.com/0x0da160/refrain-sheet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned exactly: wasm-pack downloads the matching wasm-bindgen-cli, so the
# crate version must stay deterministic.
wasm-bindgen = "=0.2.100"
# Pure-Rust DEFLATE (RFC 1951) for the binary .rcsv container. Chosen over the
# `zstd` crate because zstd-sys needs a C toolchain, which does not build for
# the wasm32-unknown-unknown target; miniz_oxide is dependency-free Rust and
# compiles cleanly to WASM. The .rcsv container records its compression method
# so a future zstd method can be added without breaking older files.
miniz_oxide = "=0.8.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# wasm-opt is disabled so the Docker/CI build never downloads binaryen at
# build time; the size cost is small and documented in the README.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
